--- a/WebThueXe1/web/WEB-INF/login.html
+++ b/WebThueXe1/web/WEB-INF/login.html
@@ -5,15 +5,23 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>a</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>TODO write content</div>
-        <div>
-            <h1>Web Thue Xe</h1>
-        </div>
+        <form name="input" action="Login" method="get">
+	<table>
+		<tr>
+		   <td>User name:</td><td><input type="text" name="user"/></td>
+		</tr>
+		<tr>
+		   <td>Password:</td><td><input type="password" name="pass"/></td>
+		</tr>
+		<tr>
+		   <td></td><td><input type="submit" value="Login"/></td>
+		</tr>
+	</table>
+	</form>
     </body>
-    
 </html>
