--- a/WebThueXe1/web/login.html
+++ b/WebThueXe1/web/login.html
@@ -10,18 +10,18 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <form name="input" action="Login" method="get">
-	<table>
-		<tr>
-		   <td>User name:</td><td><input type="text" name="user"/></td>
-		</tr>
-		<tr>
-		   <td>Password:</td><td><input type="password" name="pass"/></td>
-		</tr>
-		<tr>
-		   <td></td><td><input type="submit" value="Login"/></td>
-		</tr>
-	</table>
-	</form>
+        <form name="input" action="Login" method="post">
+            <table>
+                <tr>
+                    <td>User name:</td><td><input type="text" name="user"/></td>
+                </tr>
+                <tr>
+                    <td>Password:</td><td><input type="password" name="pass"/></td>
+                </tr>
+                <tr>
+                    <td></td><td><input type="submit" value="Login"/></td>
+                </tr>
+            </table>
+        </form>
     </body>
 </html>
