hoan thien login

--- a/WebThueXe1/web/fail.html
+++ b/WebThueXe1/web/fail.html
@@ -34,9 +34,8 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
                         <div class="one">
                             <input type="checkbox" id="check">
                             <label for="check"> Remember Me</label>
-
+                            <label class="aa">Login fail!</label>
                         </div>
-
                     </div>
                 </div>
             </div>
