--- a/WebThueXe1/web/web1.html
+++ b/WebThueXe1/web/web1.html
@@ -5,13 +5,15 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
 -->
 <html>
 
-    <head>
-        <title>TODO supply a title</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="styleWeb1.css">
-    </head>
-    <body>
+<head>
+    <title>TODO supply a title</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styleWeb1.css">
+</head>
+
+<body>
+    <div class="wrapper">
         <header>
             <h1>Around the town</h1>
         </header>
@@ -24,35 +26,41 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
 
         <section>
             <article>
-                <h2>Product 1</h2>
-                <img src="images/xedream.jpg" alt="Xe Dream" width="400px" >
+                <h2>Honda Dream Bike</h2>
+                <img src="images/xedream.jpg" alt="Xe Dream" width="400">
                 <p>Weight: 99kg</p>
                 <p>Tank capacity: 3,7l</p>
-                <p>An old dream will give you a vintage vibe while sightseeing. Suitable for short ride and short budget!</p>
+                <p>An old dream will give you a vintage vibe while sightseeing. Suitable for short ride and short
+                    budget!</p>
                 <button>Rent this</button>
             </article>
 
             <article>
-                <h2>Product 2</h2>
-                <p>Sed auctor felis vel massa malesuada, vitae hendrerit quam vehicula. Sed lobortis vulputate nisl ut laoreet.</p>
+                <h2>Honda Wave Alpha Bike</h2>
+                <img src="images/xewave.png" alt="Xe Wave" width="400">
+                <p>weight: 97kg</p>
+                <p>Tank capacity: 3,7l</p>
+                <p>Wave Alpha have a fresh vibe to it, this is your option if you wanna fly with style.</p>
                 <button>Rent this</button>
             </article>
 
             <article>
-                <h2>Product 3</h2>
-                <p>Aliquam erat volutpat. Curabitur sollicitudin pharetra venenatis. Nulla euismod est tincidunt maximus faucibus.</p>
+                <h2>Honda Air Blade</h2>
+                <img src="images/xeAB.png" alt="Xe Wave" width="400">
+                <p>Aliquam erat volutpat. Curabitur sollicitudin pharetra venenatis. Nulla euismod est tincidunt maximus
+                    faucibus.</p>
                 <button>Rent this</button>
             </article>
             <article>
                 <h2>Product 4</h2>
-                <p>Aliquam erat volutpat. Curabitur sollicitudin pharetra venenatis. Nulla euismod est tincidunt maximus faucibus.</p>
+                <p>Aliquam erat volutpat. Curabitur sollicitudin pharetra venenatis. Nulla euismod est tincidunt maximus
+                    faucibus.</p>
                 <button>Rent this</button>
             </article>
         </section>
+    </div>
 
-        <footer>
-            <p>Around the town</p>
-        </footer>
 
-    </body>
+</body>
+
 </html>
